# NovePlay

./: AllNovelManager.cpp  AllNovelManager.h  Favorite.json  FavoriteManager.cpp  FavoriteManager.h  GraphBuilder.pro  NovelRecommender.cpp  NovelRecommender.h  README.md  WebCrawler.cpp  WebCrawler.h  allnovel.json  bqg.html  customScrollContainer.cpp  customWidgets.cpp  customWidgets.h  links.cpp  links.h  main.cpp  mainwindow.cpp  mainwindow.h  mycanvas.cpp  mycanvas.h  player.cpp  player.h  slidepage.cpp  slidepage.h
serve/: CMakeLists.txt  main.cpp
serve/Serve/: CMakeLists.txt  ChatApperro.h  serve.cpp  serve.h
socketlearn/: classlist.h  socketlearn.cpp  socketlearn.h  socketlearn_static.lib
